<resources>
    <string name="app_name">Exercise Timer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="select_exercise_set">Select Exercise Set</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="add_active_rest">Add Active Rest</string>
    <string name="add_rest">Add Rest</string>
    <string name="your_set_name">Your set name</string>
    <string name="exercise_id">exercise_id</string>
    <string name="set_name">set_name</string>
    <string name="channel_name">Main</string>
    <string name="channel_description">Main notification channel</string>
    <string name="title">Title</string>
    <string name="minute_second">%1$02d:%2$02d</string>
    <string name="notification_minute_second">%1$s %2$d Total Time %3$02d:%4$02d</string>
    <string name="running">Running</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
</resources>
