<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.anupkunwar.exercisetimer.service.TimerService.State" />

        <variable
            name="stateLiveData"
            type="androidx.lifecycle.MutableLiveData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.TimerFragment">

        <TextView
            android:id="@+id/textViewTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="@{stateLiveData != null &amp;&amp; stateLiveData == State.EXERCISE_RUNNING ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="120" />

        <Button
            android:id="@+id/buttonSelectExerciseSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_exercise_set"
            android:visibility="@{stateLiveData == null || stateLiveData == State.NONE ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/textViewSetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="35sp"
            android:visibility="@{stateLiveData != null &amp;&amp; stateLiveData == State.EXERCISE_RUNNING ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/timerTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/set_name" />

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="11:11"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="80sp"
            android:visibility="@{stateLiveData != null &amp;&amp; stateLiveData == State.EXERCISE_RUNNING ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/start"
            android:visibility="@{stateLiveData == State.EXERCISE_SELECTED ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonPausePlay"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:visibility="@{stateLiveData != null &amp;&amp; stateLiveData == State.EXERCISE_RUNNING ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timerTextView"
            app:srcCompat="@drawable/ic_pause" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonReset"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/buttonPausePlay"
            app:layout_constraintTop_toTopOf="@id/buttonPausePlay"
            app:srcCompat="@drawable/ic_reset"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
